[gd_scene load_steps=2 format=3 uid="uid://skill_popup_001"]

[ext_resource type="Script" path="res://ui/skill_popup.gd" id="1_skill_popup"]

[node name="SkillPopup" type="Control"]
script = ExtResource("1_skill_popup")
mouse_filter = 2

[node name="Background" type="ColorRect" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="IconLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "?"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Skill Title"
horizontal_alignment = 1

[node name="ContentLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Skill content goes here..."
autowrap_mode = 3
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Got it!"
